Updated results section.

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -29,7 +29,9 @@
 %	\item{Blockchain is an inefficient use of computing resources}
 %	\item{Cryptocurrency economics: illiquidity, price volatility, high initial adoption costs, currency conversion costs, and decreasing marginal returns for miners}
 %	\item{Incentives: correctly configuring game-theoretic incentive structures}
-%	\item{Key management: difficulty of manual key management; possible unrecoverable loss of private keys; attacks against wallets; bugs and glitches in wallets}	
+%	\item{Key management: difficulty of manual key management; possible unrecoverable loss of private keys; attacks against wallets; bugs and glitches in wallets}
+% Text from a different section: The biggest challenge towards key-based ownership of tokens is the need to manage a public key infrastructure (PKI).
+%This is both a hassle technically~\cite{CT} as well as for users~\cite{ruoti2015johnny,barber2012bitter}.
 %	\item{Lack of protection against mistakes: transactions cannot be reversed; administrators cannot restore access if users are locked out}
 %	\item{Miner centralization}
 %	\item{Usability: difficulty of developing distributed apps; inherent complexity of technology; difficulty of access and use by consumers; education; onboarding users; difficulty of search; poor UX; lack of mobile and web clients}
