--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -9,7 +9,7 @@ To help readers situate Blockchain technology within this greater ecosystem we h
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{figures/BlockchainFlowchart}
+	\includegraphics[width=.75\textwidth]{figures/BlockchainFlowchart}
 	\caption{Comparing decentralized databases. Blockchain is highlighted in the bottom right corner.}
 	\label{fig:blockchainFlowchart}
 \end{figure*}
@@ -52,11 +52,11 @@ As such, while it can be used in place of simpler systems (e.g., a replicated da
 
 \begin{figure}
 	\centering
-	\includegraphics[page=4,width=\columnwidth]{figures/grounded-theory-main}
+	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
 	
-	Arrows indicate that the destination depends on the source except where an explicit relationship is given.
-	\caption{Capabilities for Blockchain Technology}
-	\label{fig:Capabilities}
+	Arrows indicate that the destination depends on the source.
+	\caption{Normative Properties for Blockchain Technology}
+	\label{fig:normative-properties}
 \end{figure}
 
 \snote{Discuss more about properties here. Centered around decentralized governance.}
