--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -52,6 +52,9 @@
 \usepackage[hyphens]{url}
 \usepackage[pdftitle=Title,pdfauthor=Anonymous]{hyperref}
 
+\let\labelindent\relax
+\usepackage{enumitem}
+
 %------------------------END----------------------%  
   
 
