--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -42,10 +42,27 @@ As such, while it can be used in place of simpler systems (e.g., a replicated da
 
 \begin{enumerate}
 	\item It requires shared governance and operation.
+	\item Resilience is necessary to prevent data loss and malicious updates.
 	\item It is necessary or desirable to store provenance for the system or the resources managed or controlled by the system.
 	\item It requires that the system be audited, particularly if there is a desire to trust the system itself and not the system's maintainer(s).
-	\item Replication is necessary to prevent data loss and malicious updates.
 \end{enumerate}
+
+\subsection{Private Governance}
+\snote{Potentially more broadly about governance.}
+
+In our survey of the industrial literature, we encountered several systems that claimed to be Blockchain systems, but which did not have shared governance.
+These systems resembled Blockchain systems, but with one critical difference: all the miners were controlled by a single entity.
+The most prominent example of a private governance system is IBM's HyperLedger Fabric.
+Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM manage all of the miners.
+
+Ultimately, we do not classify such systems as Blockchain technology.
+First, these systems do not have shared governance, which we identify as the key component of Blockchain technology.
+Second, the party governing the system still represents a single-point of failure.
+While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a sufficient compromise in the operating organization would lead to a compromise in the Blockchain system.
+Third, there is nothing that prevents the governing party from deleting or modifying data; even if such changes could be detected, the data itself is not replicated outside the organization and would be lost.
+Finally, most of the private governance systems are overly complex for what they are trying to accomplish.
+Without the need for shared governance, many of these systems could be better implemented as a replicated monitored database.
+
 
 \subsection{Normative and Technical Properties are Cleanly Separable}
 \label{sec:normative}
@@ -72,24 +89,7 @@ For example, several normative properties dealt with public participation, commu
 Bitcoin demonstrates that Blockchain technology can be used to achieve these properties, but it is not the case that all Blockchain systems will accomplish these goals---for example, Ripple is a Blockchain system without public participation.
 
 \section{Discussion}
-\snote{Update and refine this section.}
 In this section, we summarize a few remaining discussion points motivated by our grounded theory analysis of Blockchain technology.
-
-\subsection{Private Governance}
-\snote{Potentially more broadly about governance.}
-
-In our survey of the industrial literature, we encountered several systems that claimed to be Blockchain systems, but which did not have shared governance.
-These systems resembled Blockchain systems, but with one critical difference: all the miners were controlled by a single entity.
-The most prominent example of a private governance system is IBM's HyperLedger Fabric.
-Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM manage all of the miners.
-
-Ultimately, we do not classify such systems as Blockchain technology.
-First, these systems do not have shared governance, which we identify as the key component of Blockchain technology.
-Second, the party governing the system still represents a single-point of failure.
-While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a sufficient compromise in the operating organization would lead to a compromise in the Blockchain system.
-Third, there is nothing that prevents the governing party from deleting or modifying data; even if such changes could be detected, the data itself is not replicated outside the organization and would be lost.
-Finally, most of the private governance systems are overly complex for what they are trying to accomplish.
-Without the need for shared governance, many of these systems could be better implemented as a replicated monitored database.
 
 \subsection{Lack of Privacy and Data Discoverability}
 In the literature we found a common misconception that Blockchain technology inherently provided confidentiality for information stored within it.
@@ -107,10 +107,5 @@ With that said, Blockchain technology's disruptive power has certainly been demo
 
 \subsection{Reputation for illicit uses}
 Due to the prominence of Bitcoin, many people are familiar with Blockchain first and foremost as the technology underlying the cryptocurrency and therefore the reputations of the two are intertwined. The fact that Bitcoin is designed to avoid banks and central authorities in general, combined with its well-known history of illicit uses, somewhat poisons the well for Blockchain as a whole. Along with the causes listed above (ideology, hype, and ulterior motives), this contributes to the difficulty of discussing and considering Blockchain technology with precision and objectivity. It may also have impeded or delayed its acceptance by organizations unwilling to associate themselves with the technology's poor reputation.
-
-%\subsubsection{Anonymity is Orthogonal to Blockchain Technology}
-%Several sources in our dataset refer to anonymity as a key feature of Blockchain technology.
-%While it is true that Blockchain systems can allow for anonymous transactions, an analysis of our result graph shows that anonymity is only weakly connected to the rest of the group.
-%Thus, while anonymity is often discussed as one of the exciting properties related to Blockchain technology, it doesn't a
 
 \snote{Discuss side chains and layer 2 approaches.}
